Update .env file

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ VITE_ADSENSE_ID=your-adsense-id-here
 VITE_PERPLEXITY_API_KEY=your-perplexity-api-key-here
 VITE_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key-here
 VITE_BACKEND_URL=http://localhost:8000
-VITE_API_BASE_URL_DEPLOY=https://auth-ebooklet-backend.onrender.com `# Change this to your production backend URL
+VITE_API_BASE_URL_DEPLOY=https://backend-un6n.onrender.com `# Change this to your production backend URL
